# collections

./: .gitignore  CMakeLists.txt  CollectionItem.cpp  CollectionItem.h  CollectionsManager.cpp  CollectionsManager.h  CommandLineFlags.h  CommonDefines.h  JsonPatch.cpp  JsonPatch.h  JsonSchema.cpp  JsonSchema.h  SchemaJson.cpp  SchemaJson.h  happy_path_test.cpp  integration_tests.cpp  main.cpp
schemas/: folder.json  item.json  translatablestring.json
