cmake_minimum_required(VERSION 3.1)
project(collections)
add_compile_options(-std=c++14)
add_subdirectory(mongo-cxx-driver ${PROJECT_BINARY_DIR}/mongo-client)
add_subdirectory(jsoncpp ${PROJECT_BINARY_DIR}/jsoncpp)
add_subdirectory(uri ${PROJECT_BINARY_DIR}/uri)
add_subdirectory(googletest ${PROJECT_BINARY_DIR}/googletest)
set(COLLECTIONS_SRC JsonSchema.cpp JsonSchema.h CollectionsManager.cpp CollectionsManager.h CollectionItem.cpp CollectionItem.h)
add_executable(collections  main.cpp ${COLLECTIONS_SRC})
include_directories(mongo-cxx-driver/src ${PROJECT_BINARY_DIR}/mongo-client/include uri/src)
set(BOOST_LIBS /usr/local/lib/libboost_system-mt.a /usr/local/lib/libboost_regex-mt.a /usr/local/lib/libboost_thread-mt.a)
set(MONGO_LIBS mongo-client ${BOOST_LIBS})
set(JSON_LIBS ${PROJECT_BINARY_DIR}/jsoncpp/src/lib_json/libjsoncpp.a)
target_link_libraries(collections  ${MONGO_LIBS} ${JSON_LIBS})
set(GTEST_ROOT ${PROJECT_BINARY_DIR}/googletest)
set(GTEST_LIBS ${GTEST_ROOT}/libgtest.a ${GTEST_ROOT}/libgtest_main.a)
set(GTEST_INCLUDE_DIRS googletest/include)
include_directories(${GTEST_INCLUDE_DIRS})
add_executable(happy_path happy_path_test.cpp ${COLLECTIONS_SRC})
target_link_libraries(happy_path ${GTEST_LIBS} ${MONGO_LIBS} ${JSON_LIBS})
