cmake_minimum_required(VERSION 3.1)
project(collections)
add_compile_options(-std=c++14)
add_subdirectory(mongo-cxx-driver ${PROJECT_BINARY_DIR}/mongo-client)
add_subdirectory(jsoncpp ${PROJECT_BINARY_DIR}/jsoncpp)
add_subdirectory(uri ${PROJECT_BINARY_DIR}/uri)
add_subdirectory(googletest ${PROJECT_BINARY_DIR}/googletest)
set(COLLECTIONS_SRC JsonSchema.cpp JsonSchema.h CollectionsManager.cpp CollectionsManager.h CollectionItem.cpp CollectionItem.h)
add_executable(collections  main.cpp ${COLLECTIONS_SRC})
include_directories(mongo-cxx-driver/src ${PROJECT_BINARY_DIR}/mongo-client/include uri/src cxxopts/src)
set(URI_LIBS ${PROJECT_BINARY_DIR}/uri/src/libnetwork-uri.a)
set(BOOST_LIBS /usr/local/lib/libboost_system-mt.a /usr/local/lib/libboost_regex-mt.a /usr/local/lib/libboost_thread-mt.a)
set(MONGO_LIBS mongo-client ${BOOST_LIBS})
set(JSON_LIBS ${PROJECT_BINARY_DIR}/jsoncpp/src/lib_json/libjsoncpp.a)
set(COLLECTIONS_LIBS ${MONGO_LIBS} ${JSON_LIBS} ${URI_LIBS})
target_link_libraries(collections ${COLLECTIONS_LIBS})
set(GTEST_ROOT ${PROJECT_BINARY_DIR}/googletest)
set(GTEST_LIBS ${GTEST_ROOT}/libgtest.a)
set(GTEST_INCLUDE_DIRS googletest/include)
include_directories(${GTEST_INCLUDE_DIRS})
add_executable(integration_tests integration_tests.cpp ${COLLECTIONS_SRC})
set(TEST_LIBS ${GTEST_LIBS} mongo-dbtest)
target_link_libraries(integration_tests ${TEST_LIBS} ${COLLECTIONS_LIBS})
