cmake_minimum_required(VERSION 3.1)
project(collections)
add_compile_options(-std=c++14)
add_subdirectory(mongo-cxx-driver ${PROJECT_BINARY_DIR}/mongo-client)
add_subdirectory(uri ${PROJECT_BINARY_DIR}/uri)
add_subdirectory(googletest ${PROJECT_BINARY_DIR}/googletest)
include_directories(mongo-cxx-driver/src ${PROJECT_BINARY_DIR}/mongo-client/include uri/src)
set(BOOST_LIBS boost_system-mt boost_regex-mt boost_thread-mt boost_filesystem-mt)
set(MONGO_LIBS mongo-client ${BOOST_LIBS})
set(COLLECTIONS_SRC CommonDefines.h CollectionsManager.cpp CollectionsManager.h JsonSchema.cpp JsonSchema.h JsonPatch.cpp JsonPatch.h)
set(COLLECTIONS_LIBS ${MONGO_LIBS})
add_executable(collections  main.cpp ${COLLECTIONS_SRC} CommandLineFlags.h )
target_link_libraries(collections ${COLLECTIONS_LIBS})
include_directories(googletest/include uri/src)
set(TEST_LIBS gtest gtest_main mongo-dbtest)
add_executable(integration_tests integration_tests.cpp ${COLLECTIONS_SRC})
target_link_libraries(integration_tests ${TEST_LIBS} ${COLLECTIONS_LIBS})
